<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_top"
    tools:context=".CreatDocFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/dim_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_doctor" />

    <EditText
        android:id="@+id/txtFirstNameDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/firs_name" />

    <EditText
        android:id="@+id/txtLastNameDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/txtBirthdayDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:inputType="date"
        android:hint="@string/birthday" />

    <EditText
        android:id="@+id/txtCallNumberDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/call" />

    <EditText
        android:id="@+id/txtCniDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/cni" />

    <EditText
        android:id="@+id/txtSpecialityDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/speciality" />
    <Button
        android:id="@+id/btnfinish"
        android:layout_margin="@dimen/dim_top"
        android:text="@string/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>