<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_presentation">

    <fragment
        android:id="@+id/nav_presentation"
        android:name="com.example.gestionrvpatient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_doctor"
        android:name="com.example.gestionrvpatient.ListDocFragment"
        android:label="@string/doctor"
        tools:layout="@layout/fragment_list_doc" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.gestionrvpatient.AideFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_aide" />
</navigation>